--- a/src/login.css
+++ b/src/login.css
@@ -69,3 +69,14 @@ html,body {
 .login-container {
     margin-top:100px;
 }
+
+.login-button {
+    background-color: rgb(22, 0, 0);
+    padding:12px 6px 12px 6px;
+    width:105%;
+    border-radius:8px;
+    color:white;
+
+    margin-bottom:12px;
+    margin-top:22px;
+}
